--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,39 @@
 .line-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     background-color: #3399cc;
+    width: 100%;
+    height: 118px;
 }
 
+.logo {
+    display: flex;
+    align-items: center;
+    font-size: 200%;
+    color: aliceblue;
+}
+
+.header-telephone {
+    display: flex;
+    align-items: flex-start;
+    font-size: 150%;
+    color: aliceblue;
+}
+.line-header-nav {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.logo-text {
+
+}
+.header-telephone {
+
+}
 .line-header2 {
-    background-image: image("img/background-header2"); /* строка index.html №50 - картинка с доктором не подключается, в чем причина? */
+    background-image: url(../img/background-header2.png);
+    width: 100%;
+    height: 515px;
+
 }
