--- a/css/main.css
+++ b/css/main.css
@@ -1,30 +1,45 @@
+a {
+    text-decoration: none;
+}
 .line-header {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     background-color: #3399cc;
-    width: 100%;
+    width: 1920px;
     height: 118px;
-}
+    }
 
 .logo {
     display: flex;
     align-items: center;
-    font-size: 200%;
+    justify-content: flex-start;
+    font-size: 25px;
     color: aliceblue;
 }
 
 .header-telephone {
     display: flex;
     align-items: flex-start;
-    font-size: 150%;
+    font-size: 25px;
     color: aliceblue;
 }
-.line-header-nav {
+.header-right-side {
     display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
+    align-items: flex-end;
 }
-
+.line-header-nav {
+    list-style-type: none;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    }
+.item {
+    font-size: 20px;
+    color: #333333;
+    padding: 5px;
+    margin-left: 31px;
+}
 .logo-text {
 
 }
@@ -33,7 +48,7 @@
 }
 .line-header2 {
     background-image: url(../img/background-header2.png);
-    width: 100%;
+    width: 1440px;
     height: 515px;
 
 }
